--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <h2 class="text-xl md:text-2xl text-slate-600 mb-6">مدیر ارتباط با رسانه | مدرس هوش مصنوعی | متخصص تولید محتوا</h2>
                     <p class="text-lg text-slate-600 mb-8">غلامرضا بابازاده با بیش از 18 سال تجربه در روابط عمومی، تولید محتوا، و تحول دیجیتال، در سازمان‌های دولتی و کسب‌وکارهای آنلاین فعالیت کرده است. او بنیان‌گذار برند «زود کوک» و چت‌بات هوشمند «ZoodGPT» می‌باشد.</p>
                     <div class="flex space-x-4 space-x-reverse">
-                        <a href="mailto:rbabazade@gmail.com" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition shadow-md hover:shadow-lg">تماس با من</a>
+                        <a href="#contact" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition shadow-md hover:shadow-lg">تماس با من</a>
                         <a href="https://jobvision.ir/cv/30626223-153349" class="px-6 py-3 border border-blue-600 text-blue-600 rounded-lg hover:bg-blue-50 transition">دانلود رزومه</a>
                     </div>
                 </div>
