--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                             </div>
                             <div>
                                 <h4 class="font-medium">تلفن</h4>
-                                <a href="tel:9891285089771+" class="text-green-600 hover:underline">+989128509771</a>
+                                <a href="tel:9891285089771+" class="text-green-600 hover:underline">09128509771</a>
                             </div>
                         </div>
                         
